New SessionQueue class

--- a/pwiz_tools/Shared/Common/Common.csproj
+++ b/pwiz_tools/Shared/Common/Common.csproj
@@ -155,7 +155,11 @@
     <Compile Include="DataAnalysis\NelderMeadSimplex.cs" />
     <Compile Include="DataAnalysis\LoessInterpolator.cs" />
     <Compile Include="Database\NHibernate\AbstractSessionWithLock.cs" />
+    <Compile Include="Database\NHibernate\DefaultEntityHandler.cs" />
+    <Compile Include="Database\NHibernate\EntityHandler.cs" />
+    <Compile Include="Database\NHibernate\InsertSession.cs" />
     <Compile Include="Database\NHibernate\SessionFactoryFactory.cs" />
+    <Compile Include="Database\NHibernate\SessionQueue.cs" />
     <Compile Include="Database\NHibernate\SessionWithLock.cs" />
     <Compile Include="Database\NHibernate\StatelessSessionWithLock.cs" />
     <Compile Include="Database\SqliteOperations.cs" />
@@ -597,7 +601,9 @@
       <Name>CommonUtil</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Database\NHibernate\Inserting\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
