--- a/pwiz_tools/Shared/CommonUtil/CommonUtil.csproj
+++ b/pwiz_tools/Shared/CommonUtil/CommonUtil.csproj
@@ -162,6 +162,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Images.resx</DependentUpon>
     </Compile>
+    <Compile Include="SystemUtil\ActionQueue.cs" />
     <Compile Include="SystemUtil\Caching\ProductionFacility.cs" />
     <Compile Include="SystemUtil\Caching\Production.cs" />
     <Compile Include="SystemUtil\Caching\Receiver.cs" />
@@ -270,7 +271,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-	<EmbeddedResource Include="CommonResources\GeneralTerms.ja.resx">
+    <EmbeddedResource Include="CommonResources\GeneralTerms.ja.resx">
       <DependentUpon>GeneralTerms.resx</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
@@ -278,12 +279,12 @@
       <DependentUpon>GeneralTerms.resx</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-	<EmbeddedResource Include="CommonResources\GeneralTerms.resx">
+    <EmbeddedResource Include="CommonResources\GeneralTerms.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>GeneralTerms.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-	<EmbeddedResource Include="CommonResources\Images.ja.resx">
+    <EmbeddedResource Include="CommonResources\Images.ja.resx">
       <DependentUpon>Images.resx</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
