Adding HTML files to ResourcesOrganizer

--- a/pwiz_tools/Skyline/Executables/DevTools/ResourcesOrganizer/ResourcesOrganizer/ResourcesOrganizer.csproj
+++ b/pwiz_tools/Skyline/Executables/DevTools/ResourcesOrganizer/ResourcesOrganizer/ResourcesOrganizer.csproj
@@ -24,6 +24,9 @@
     <Reference Include="CsvHelper">
       <HintPath>..\lib\CsvHelper.dll</HintPath>
     </Reference>
+    <Reference Include="HtmlAgilityPack">
+      <HintPath>..\lib\HtmlAgilityPack.dll</HintPath>
+    </Reference>
     <Reference Include="Iesi.Collections">
       <HintPath>..\lib\NHibernate\Iesi.Collections.dll</HintPath>
     </Reference>
